--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
 
 header {
     display: flex;
@@ -27,6 +36,18 @@ menu {
 menu li {
     font-size: 20px;
     font-weight: 600;
+}
+
+.banner {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
+}
+
+.banner img {
+    width: 100%;
+    object-fit: cover;
 }
 
 
