--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,15 +15,10 @@ header {
     background-color: green;
 }
 
-h1 {
+header h1 {
     font-size: 50px;
     flex: 1 1 60%;
     margin-left: 40px;
-}
-
-h2 {
-    font-size: 35px;
-    text-align: right;
 }
 
 nav {
@@ -54,6 +49,11 @@ main section {
     flex-direction: row;
     justify-content: space-around;
     align-items: stretch;
+}
+
+main section h2 {
+    font-size: 35px;
+    text-align: right;
 }
 
 .section-header {
@@ -91,11 +91,6 @@ footer {
 }
 
 .banner img {
-    width: 100%;
-    object-fit: cover;
-}
-
-.work-link img {
     width: 100%;
     object-fit: cover;
 }
@@ -144,9 +139,22 @@ footer {
     margin-right: 0px;
 }
 
+.work-link img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.work-title {
+    position: relative;
+    bottom: 116px;
+    left: 20px;
+    border-style: solid;
+    border-color: black;
+}
+
 #contact {
     background-color: indigo;
-
 }
 
 #contact h2 {
@@ -170,7 +178,6 @@ footer {
     header {
         flex-direction: column;
     }
-
     main section {
         flex-direction: column;
         justify-content: center;
@@ -182,6 +189,11 @@ footer {
     }x
     .section-divider {
         display: none;
+    }
+    .section-content {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     #work-content {
         display: flex;
@@ -197,7 +209,7 @@ footer {
 }
 /* Small Smartphone Size Formatting  */
 @media screen and (max-width: 576px) {
-    h1 {
+    header h1 {
         font-size: 10vw;
         text-align: center;
         margin-left: 0px;
