--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,33 +6,40 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    margin: 0px;
+    padding: 0px;
 }
 
 p {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 /* Remove underline from links */
 a {
     text-decoration: none;
 }
+a:visited {
+    text-decoration: none;
+    color: #000;
+}
 
 header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: green;
+    background-color: #294f75;
+    width: 100%;
 }
 
 header h1 {
     font-size: 50px;
-    flex: 1 1 60%;
+    text-shadow: 1px 1px 6px #b8b8b8;
+    flex: 1 1 50%;
     margin-left: 40px;
 }
 
 nav {
-    flex: 1 1 40%;
-    background-color: yellow;
+    flex: 1 1 50%;
 }
 
 menu {
@@ -45,13 +52,14 @@ menu {
 }
 
 menu li a {
-    color: black;
+    color: #000;
     font-size: 30px;
     font-weight: 600;
+    text-shadow: 1px 1px 6px #b8b8b8;
 }
 
 main {
-    background-color: yellow;
+    background-color: #849eb8;
 }
 
 main section {
@@ -64,6 +72,8 @@ main section {
 main section h2 {
     font-size: 35px;
     text-align: right;
+    color: #000;
+    text-shadow: 1px 1px 6px #e6e6e6;
 }
 
 .section-header {
@@ -76,7 +86,8 @@ main section h2 {
 .section-divider {
     width: 5px;
     height: auto;
-    background-color: black;
+    background-color: #000;
+    box-shadow: 1px 1px 6px #e6e6e6;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -89,7 +100,7 @@ main section h2 {
 }
 
 footer {
-    background-color: orange;
+    background-color: #294f75;
     text-align: center;
 }
 
@@ -103,18 +114,6 @@ footer {
 .banner img {
     width: 100%;
     object-fit: cover;
-}
-
-#about {
-    background-color: blue;
-}
-
-#about h2 {
-    background-color: greenyellow;
-}
-
-#about p {
-    background-color: aqua;
 }
 
 #about-content {
@@ -133,14 +132,6 @@ footer {
     width: 100%;
 }
 
-#work  {
-    background-color: hotpink;
-}
-
-#work h2 {
-    background-color: red;
-}
-
 #work-content {
     display: flex;
     flex-wrap: wrap;
@@ -149,7 +140,6 @@ footer {
 }
 
 #lead-work-link {
-    background-color: orange;
     flex: 2 2 auto;
     width: 100%;
     margin-left: 0px;
@@ -160,45 +150,52 @@ footer {
     display: flex;
     flex-wrap: wrap;
     flex: 1 1 40%;
-    background-color: green;
     margin-left: 0px;
     margin-right: 0px;
 }
 
 .work-link img {
+    box-shadow: 1px 1px 6px #e6e6e6;
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
 .work-title {
     position: relative;
-    bottom: 130px;
+    bottom: 120px;
     left: 20px;
+    background-color: #294f75;
     border-style: solid;
     border-color: black;
+    box-shadow: 1px 1px 1px #e6e6e6;
+    padding: 10px;
 }
 
-#contact {
-    background-color: indigo;
+.work-title h3 {
+    font-size: 30px;
+    text-shadow: 1px 1px 1px #b8b8b8;
+    padding: 0px;
+    margin: 0px;
 }
 
-#contact h2 {
-    background-color: lavender;
+.work-title p {
+    font-size: 22px;
+    padding: 0px;
+    margin: 0px;
 }
 
 #contact-content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: aliceblue;
     align-items: center;
 }
 
-#contact h3 {
+#contact-content h3 {
     color: black;
     font-size: 30px;
     font-weight: 600;
+    text-shadow: 1px 1px 6px #e6e6e6;
 }
 
 /* Tablet and Small Laptop Screen Formatting  */
