--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ header {
 
 header h1 {
     font-size: 50px;
-    text-shadow: 1px 1px 6px #b8b8b8;
+    text-shadow: 0px 0px 3px #b8b8b8;
     flex: 1 1 50%;
     margin-left: 40px;
 }
@@ -55,7 +55,7 @@ menu li a {
     color: #000;
     font-size: 30px;
     font-weight: 600;
-    text-shadow: 1px 1px 6px #b8b8b8;
+    text-shadow: 0px 0px 3px #b8b8b8;
 }
 
 main {
@@ -73,7 +73,7 @@ main section h2 {
     font-size: 35px;
     text-align: right;
     color: #000;
-    text-shadow: 1px 1px 6px #e6e6e6;
+    text-shadow: 0px 0px 3px #e6e6e6;
 }
 
 .section-header {
@@ -87,7 +87,7 @@ main section h2 {
     width: 5px;
     height: auto;
     background-color: #000;
-    box-shadow: 1px 1px 6px #e6e6e6;
+    box-shadow: 0px 0px 3px #e6e6e6;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -152,28 +152,29 @@ footer {
     flex: 1 1 40%;
     margin-left: 0px;
     margin-right: 0px;
+    height: 20%;
 }
 
 .work-link img {
-    box-shadow: 1px 1px 6px #e6e6e6;
+    box-shadow: 0px 0px 3px #e6e6e6;
     width: 100%;
     object-fit: cover;
 }
 
 .work-title {
     position: relative;
-    bottom: 120px;
+    bottom: 100px;
     left: 20px;
     background-color: #294f75;
     border-style: solid;
     border-color: black;
-    box-shadow: 1px 1px 1px #e6e6e6;
+    box-shadow: 0px 0px 1px #e6e6e6;
     padding: 10px;
 }
 
 .work-title h3 {
     font-size: 30px;
-    text-shadow: 1px 1px 1px #b8b8b8;
+    text-shadow: 0px 0px 1px #b8b8b8;
     padding: 0px;
     margin: 0px;
 }
@@ -182,6 +183,10 @@ footer {
     font-size: 22px;
     padding: 0px;
     margin: 0px;
+}
+
+#contact-section {
+    margin-top: -150px;
 }
 
 #contact-content {
@@ -195,7 +200,7 @@ footer {
     color: black;
     font-size: 30px;
     font-weight: 600;
-    text-shadow: 1px 1px 6px #e6e6e6;
+    text-shadow: 0px 0px 3px #e6e6e6;
 }
 
 /* Tablet and Small Laptop Screen Formatting  */
