--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
-
 body {
     display: flex;
     flex-direction: column;
@@ -9,12 +8,10 @@ body {
     margin: 0px;
     padding: 0px;
 }
-
 p {
     font-size: 20px;
 }
-
-/* Remove underline from links */
+/* Remove underline from links, neutralize visited link color */
 a {
     text-decoration: none;
 }
@@ -22,7 +19,7 @@ a:visited {
     text-decoration: none;
     color: #000;
 }
-
+/* Styling for Header and Nav Bar */
 header {
     display: flex;
     flex-direction: row;
@@ -30,18 +27,15 @@ header {
     background-color: #294f75;
     width: 100%;
 }
-
 header h1 {
     font-size: 50px;
     text-shadow: 0px 0px 3px #b8b8b8;
     flex: 1 1 50%;
     margin-left: 40px;
 }
-
 nav {
     flex: 1 1 50%;
 }
-
 menu {
     display: flex;
     justify-content: space-around;
@@ -50,39 +44,45 @@ menu {
     height: 100%;
     margin-top: 0px;
 }
-
 menu li a {
     color: #000;
     font-size: 30px;
     font-weight: 600;
     text-shadow: 0px 0px 3px #b8b8b8;
 }
-
+/* Styling for Main Banner Image */
+.banner {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
+}
+.banner img {
+    width: 100%;
+    object-fit: cover;
+}
+/* General Styling for Main Content Section */
 main {
     background-color: #849eb8;
 }
-
 main section {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: stretch;
 }
-
 main section h2 {
     font-size: 35px;
     text-align: right;
     color: #000;
     text-shadow: 0px 0px 3px #e6e6e6;
 }
-
 .section-header {
     display: flex;
     justify-content: flex-end;
     flex: 1 1 15%;
     margin: 20px;
 }
-
 .section-divider {
     width: 5px;
     height: auto;
@@ -91,61 +91,38 @@ main section h2 {
     margin-top: 10px;
     margin-bottom: 10px;
 }
-
 .section-content {
     display: flex;
     justify-content: center;
     flex: 2 1 75%;
     margin: 20px;
 }
-
-footer {
-    background-color: #294f75;
-    text-align: center;
-}
-
-.banner {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: auto;
-}
-
-.banner img {
-    width: 100%;
-    object-fit: cover;
-}
-
+/* Styling for About Section */
 #about-content {
     display: flex;
 }
-
 #avatar {
     flex: 1 1 30%;
 }
-
 #about-content article {
     flex: 2 1 70%;
 }
-
 #avatar img {
     width: 100%;
 }
-
+/* Styling for Work Section */
 #work-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 40px;
 }
-
 #lead-work-link {
     flex: 2 2 auto;
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
 }
-
 .work-link {
     display: flex;
     flex-wrap: wrap;
@@ -154,13 +131,11 @@ footer {
     margin-right: 0px;
     height: 20%;
 }
-
 .work-link img {
     box-shadow: 0px 0px 3px #e6e6e6;
     width: 100%;
     object-fit: cover;
 }
-
 .work-title {
     position: relative;
     bottom: 100px;
@@ -171,51 +146,48 @@ footer {
     box-shadow: 0px 0px 1px #e6e6e6;
     padding: 10px;
 }
-
 .work-title h3 {
     font-size: 30px;
     text-shadow: 0px 0px 1px #b8b8b8;
     padding: 0px;
     margin: 0px;
 }
-
 .work-title p {
     font-size: 22px;
     padding: 0px;
     margin: 0px;
 }
-
+/* Styling for Contact Section */
 #contact-section {
+    /* Fixes weird gap at bottom of work section */
     margin-top: -150px;
 }
-
 #contact-content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
-
 #contact-content h3 {
     color: black;
     font-size: 30px;
     font-weight: 600;
     text-shadow: 0px 0px 3px #e6e6e6;
 }
-
+/* Styling for Footer */
+footer {
+    background-color: #294f75;
+    text-align: center;
+}
 /* Tablet and Small Laptop Screen Formatting  */
-
 @media screen and (max-width: 1100px) {
     #avatar {
         flex: 1 1 45%;
     }
-
     #about-content article {
         flex: 2 1 55%;
     }
 }
-
-
 /* Large Smartphone Screen Formatting  */
 @media screen and (max-width: 768px) {
     header {
@@ -260,5 +232,4 @@ footer {
     #contact-content {
         flex-direction: column;
     }
-
 }
