--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,8 +138,8 @@ main section h2 {
 }
 .work-title {
     position: relative;
-    bottom: 100px;
-    left: 20px;
+    bottom: 90px;
+    left: 16px;
     background-color: #294f75;
     border-style: solid;
     border-color: black;
@@ -147,13 +147,13 @@ main section h2 {
     padding: 10px;
 }
 .work-title h3 {
-    font-size: 30px;
+    font-size: 25px;
     text-shadow: 0px 0px 1px #b8b8b8;
     padding: 0px;
     margin: 0px;
 }
 .work-title p {
-    font-size: 22px;
+    font-size: 18px;
     padding: 0px;
     margin: 0px;
 }
@@ -180,13 +180,26 @@ footer {
     text-align: center;
 }
 /* Tablet and Small Laptop Screen Formatting  */
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
+    p {
+        font-size: 18px;
+    }
     #avatar {
         flex: 1 1 45%;
     }
     #about-content article {
         flex: 2 1 55%;
     }
+    .work-title {
+        bottom: 65px;
+        left: 10px;
+    }
+    .work-title h3 {
+        font-size: 15px;
+    }
+    .work-title p {
+        font-size: 12px;
+
 }
 /* Large Smartphone Screen Formatting  */
 @media screen and (max-width: 768px) {
