--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,9 @@ menu li a {
 .banner img {
     width: 100%;
     object-fit: cover;
+    border-style: solid;
+    border-color: #000;
+    border-width: 1px;
 }
 /* General Styling for Main Content Section */
 main {
@@ -109,6 +112,9 @@ main section h2 {
 }
 #avatar img {
     width: 100%;
+    border-style: solid;
+    border-color: #000;
+    border-width: 1px;
 }
 /* Styling for Work Section */
 #work-content {
@@ -132,6 +138,9 @@ main section h2 {
     height: 20%;
 }
 .work-link img {
+    border-style: solid;
+    border-color: #000;
+    border-width: 3px;
     box-shadow: 0px 0px 3px #e6e6e6;
     width: 100%;
     object-fit: cover;
@@ -142,7 +151,8 @@ main section h2 {
     left: 16px;
     background-color: #294f75;
     border-style: solid;
-    border-color: black;
+    border-color: #849eb8;
+    border-width: 3px;
     box-shadow: 0px 0px 1px #e6e6e6;
     padding: 10px;
 }
@@ -199,16 +209,30 @@ footer {
     }
     .work-title p {
         font-size: 12px;
-
+    }
+    #contact-content h3 {
+        font-size: 20px;
+    }
 }
 /* Large Smartphone Screen Formatting  */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     header {
         flex-direction: column;
+        align-items: center;
     }
+    nav {
+        width: 100%;
+    }
+    menu {
+        justify-content: space-evenly;
+        padding-left: 0px;
+    }    
     main section {
         flex-direction: column;
         justify-content: center;
+    }
+    main section h2 {
+        padding: 0px;
     }
     .section-header {
         justify-content: center;
@@ -234,16 +258,35 @@ footer {
     .work-link {
         width: 80%;
     }
+    #contact-section {
+        margin-top: -50px;
+    }
 }
 /* Small Smartphone Size Formatting  */
 @media screen and (max-width: 576px) {
     header h1 {
         font-size: 10vw;
-        text-align: center;
         margin-left: 0px;
+    }
+    menu {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    menu li {
+        font-size: 8vw;
+    }
+    .work-title {
+        bottom: 0px;
+        left: 0px;
+        padding: 10px;
+    }
+    .work-title h3 {
+        font-size: 12px;
+    }
+    .work-title p {
+        font-size: 11px;
     }
     #contact-content {
         flex-direction: column;
     }
-}
 }
